assets/css/style.css
:root {
    --primaryColor: rgb(171, 60, 222);
    --secondaryColor: rgb(134, 40, 146);
    --slide1: rgb(20, 151, 227);
    --slide2: rgb(227, 196, 20);
    --slide3: rgb(92, 0, 128);
    --slide4: rgb(92, 0, 128);
    --slide5: rgb(92, 0, 128);
}
@font-face {
    font-family: 'Source Sans Pro';
    font-style: normal;
    font-weight: 400;
    src: url("../fonts/source-sans-pro/source-sans-pro-v21-latin-regular.eot");
    src: local(""),
        url("../fonts/source-sans-pro/source-sans-pro-v21-latin-regular.eot?iefix") format("embedded-opentype"),
        url("../fonts/source-sans-pro/source-sans-pro-v21-latin-regular.woff2") format("woff2"),
        url("../fonts/source-sans-pro/source-sans-pro-v21-latin-regular.woff") format("woff"),
        url("../fonts/source-sans-pro/source-sans-pro-v21-latin-regular.ttf") format("truetype"),
        url("../fonts/source-sans-pro/source-sans-pro-v21-latin-regular.svg#SourceSansPro") format("svg"),
}

body .container, 
body .container-fluid,
body a,
body p {
    font-family: "Source Sans Pro";
    font-size: 14px;
}
h1,h2,h3,h4,h5,h6 {
    font-family: "Source Sans Pro";
}
p {
    line-height: 30px;
}

input[type=radio] {
    /* visibility: hidden; */
    margin-right: -20px;
}



/*--------------------------------------------------------------
# Sections General Heading
--------------------------------------------------------------*/
section {
    padding: 10% 0;
}
.heading {
    text-align: center;
    margin-bottom: 2%;
}
.heading h4 {
    color: var(--primaryColor);
    font-weight: 300px;
    font-size: 14px;
    text-transform: uppercase;
    position: relative;
    margin-bottom: 20px;
    padding: 0% 8.5%;
} 
.heading h2 {
    position: relative;
    font-weight: 700;
    font-size: 25px;
    color: #000;
    text-transform: capitalize;
    margin: auto;
}
.heading .btn {
    font-size: 14px;
    border: 1px solid var(--primaryColor);
    color: var(--primaryColor);
    margin-top: 20px;
}
.heading a {
    background-color: var(--primaryColor);
    color: #fff;
    padding: 7px 10px;
}
section .heading-texts h2 {
    font-weight: 700;
}
section .heading-texts span {
    color: var(--primaryColor)
}

/*--------------------------------------------------------------
# Navbar section
--------------------------------------------------------------*/
.nav .nav-item .nav-link.active {
    background: var(--primaryColor);
}

nav {
    padding: 0 6.5%;
    color: #000;
    background-color: #fff;
}
nav.scrolled {
    box-shadow: 0 3px 10px rgba(9, 9, 9, 0.109);
}
nav .navbar-nav  {
    margin-top: -10px;
    flex: 1;
    display: flex;
}
a.nav-link {
    color: rgba(0, 0, 0, 0.983);
    cursor: pointer;
}
a.active, a.nav-link:hover {
    color: var(--primaryColor);
}
nav .menu-links {
    flex: 1;
}
nav .nav-item {
    display: inline-block;
    margin-bottom: -10px;
}
nav .nav-item.socials i {
    cursor: pointer;
}
nav .nav-item.socials i:hover {
    color: var(--primaryColor);
}
@media (max-width: 1068px) {
    nav .nav-item {
        display: inline-block;
        margin: 10px 0;
    }

}
@media (max-width: 850px) {
    nav .nav-item.socials {
        display: none;
    }
}
@media (max-width: 570px) {
    nav {
        padding: 0 3%;
    }
    nav .menu-links {
        text-align: left;
    }
    nav .nav-item {
        text-align: left;
        display: block;
        margin: 10px 0;
    }
    nav .nav-item.socials {
        display: block;
    }
}


/*--------------------------------------------------------------
# Header section
--------------------------------------------------------------*/

header {
    margin: 7% 6.5%;
    max-height: 80vh;
    box-shadow: 2px 2px 10px rgba(153, 153, 153, 0.201);
    position: relative;
    overflow: hidden;
}
header .slide {
    display: none;
}
header .slide.active {
    display: flex;
    align-items: center;
}
header .hero {
    padding: 4%;
    margin: 0 50px;
    position: relative;
}
header .hero .back {
    position: absolute;
    font-size: 5vw;
    font-family:'Times New Roman', Times, serif;
    top: -3%;
    left: -3%;
    color: rgba(0, 0, 0, 0.056);
}
header .hero h1 {
    font-size: 30px;
    font-weight: 600;
    font-family: 'Source Sans Pro';
    opacity: 0;
    animation: heroSlide 10s ease-in-out;
    animation-delay: 0s;
}
header .hero h1 span {
    color: var(--slide1);
}
header .hero p {
    opacity: 0;
    animation: heroSlide 9.0s ease-in-out;
    animation-delay: 1s;
}
header .hero-input {
    padding: 2px;
    display: flex;
    justify-content: space-between;
    opacity: 0;
    animation: heroSlide 8.5s ease-in-out;
    animation-delay: 1.5s;
}
header .hero button {
    font-size: 12px;
    padding: 8px 20px;
    background: var(--slide1); 
    color: #fff;
}
header .hero button:hover {
    background: #000;
    color: #fff;
}
header img {
    background-color: #f0f0f0;
    height: 80vh;
    width: 50%;
    object-fit: cover;
    animation: imgSlide 10s ease-in-out;
}
header .hero-bottom {
    font-size: 10px;
    color: rgb(79, 79, 79);
    position: absolute;
    bottom: -20px;
    left: 8%;
}
header .hero-bottom i,
header .hero-bottom span {
    color: var(--primaryColor);
}
header .hero-bottom i {
    padding: 10px 12px;
    margin: 0 10px;
    margin-bottom: 20px;
    border: 1px solid rgb(199, 199, 199);
    border-radius: 50%;
    cursor: pointer;
}
header .hero-bottom i:hover {
    border: 1px solid #fff;
    color: #fff;
    background-color: var(--primaryColor);
}

header .slide:nth-child(2) .hero h1 span {
    color: var(--slide2);
}
header .slide:nth-child(2) .hero .hero-input button {
    background-color: var(--slide2);
}
header .slide:nth-child(3) .hero h1 span {
    color: var(--slide3);
}
header .slide:nth-child(3) .hero .hero-input button {
    background-color: var(--slide3);
}
header .slide:nth-child(4) .hero h1 span {
    color: var(--slide4);
}
header .slide:nth-child(4) .hero .hero-input button {
    background-color: var(--slide4);
}
/* ... */

